

##################################################################

opsi-winst/opsi-script (4.12.0.16) stable; urgency=low

  * typo of log messages
  * change to Lazarus 1.8.2
  * switch HighDPI awareness on (8.1+, per monitor)
  * osparser: reportError: more info on defined functions at syntax error
  * osfunc: getsectionlines: include leading comments and empty lines
  * osdefinedfunctions, osparser: allow defined functions with no parameters
  * osdefinedfunctions, osparser: allow defined functions with data  type void
  * oslog: fixed check for library logging
  * activate normal debug_lib again (see 4.12.0.13 temporary always true)
  * osparser: doAktionen: tsDefineFunction: try-excepts

-- Detlef Oertel <d.oertel@uib.de>  Wed, 14 Mar 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.15) stable; urgency=low

  * oswebservice: getMapOfLoginscripts2Run: fix: check not only for productId but also for productVersion and PackageVersion
  * oswebservice: getMapOfLoginscripts2Run: change logging to log_prog

-- Detlef Oertel <d.oertel@uib.de>  Fri, 09 Mar 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.14) stable; urgency=low

  * osparser: evaluateBoolean: sendlog: switch log append mode on
      in order to avoid that a final log removes this one
  * new function : getSubListByMatch(<search string>, <target list>) :stringlist
  * new function : getSubListByMatch(<search list>, <target list>) :stringlist
  * new function : getSubListByContaining(<search string>, <target list>) :stringlist
  * new function : getSubListByContaining(<search list>, <target list>) :stringlist
  * new function : getSubListByKey(<search string>, <target list>) :stringlist
  * new function : getSubListByKey(<search list>, <target list>) :stringlist
  * new function : getKeyList(<list>) :stringlist

-- Detlef Oertel <d.oertel@uib.de>  Tue, 13 Feb 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.13) stable; urgency=low

  * osparser: for-to loop: fix failure at for x to x loop